--- a/bin/lang.cfg
+++ b/bin/lang.cfg
@@ -7,6 +7,10 @@ rus
 Неверных слов:
 Время:
 Введите это слово:
+настройки
+Напишите "выйти", чтобы выключить программу, или "настройки", чтобы зайти в настройки
+выйти
+Не понимаю, что это значит
 eng
 Keyboard Ninja. Press "ENTER" for start game. Write "end" to finish
 Get ready...
@@ -16,3 +20,7 @@ Correct words:
 Uncorrect words:
 Time:
 Write this word:
+settings
+Write "close" if you want to exit the program. Write "settings" if you want to go to settings
+close
+Don't understand what that means
