Refactoring reading settings function

--- a/bin/lang.cfg
+++ b/bin/lang.cfg
@@ -11,6 +11,7 @@ rus
 Напишите "выйти", чтобы выключить программу, или "настройки", чтобы зайти в настройки
 выйти
 Не понимаю, что это значит
+НАЧАЛИ!
 eng
 Keyboard Ninja. Press "ENTER" for start game. Write "end" to finish
 Get ready...
@@ -24,3 +25,4 @@ settings
 Write "close" if you want to exit the program. Write "settings" if you want to go to settings
 close
 Don't understand what that means
+RUN!
